--- a/bottom_banner.html
+++ b/bottom_banner.html
@@ -13,15 +13,51 @@
             width: 100%;
             background-color: #fff;
             padding: 10px;
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
             z-index: 1000;
             font-family: Arial, sans-serif;
         }
 
-        /* CSS for circular progress */
+        .banner-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+            margin-bottom: 10px;
+        }
+
+        .banner-title {
+            font-size: 16px;
+            font-weight: bold;
+        }
+
+        .add-to-cart-button {
+            padding: 8px 16px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 14px;
+        }
+
+        /* CSS for the circular progress */
+        .nutrition-circles {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+        }
+
+        .circle-container {
+            text-align: center;
+        }
+
+        .circle-title {
+            font-size: 14px;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
         .circle {
             position: relative;
             width: 60px;
@@ -71,48 +107,58 @@
 
 <!-- Content of the page -->
 <div class="bottom-banner">
-    <!-- Carbs Circle -->
-    <div class="carbs">
-        <div class="circle">
-            <svg width="60" height="60">
-                <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
-                <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">56%</text>
-            </svg>
-        </div>
-        <div class="circle-value">30.1g</div>
+    <div class="banner-header">
+        <div class="banner-title">Pizza Salami - Nutrition Value</div>
+        <button class="add-to-cart-button">Add to Cart</button>
     </div>
-
-    <!-- Fat Circle -->
-    <div class="fat">
-        <div class="circle">
-            <svg width="60" height="60">
-                <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
-                <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">72%</text>
-            </svg>
+    <div class="nutrition-circles">
+        <!-- Carbs Circle -->
+        <div class="circle-container carbs">
+            <div class="circle-title">Carbs</div>
+            <div class="circle">
+                <svg width="60" height="60">
+                    <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
+                    <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">56%</text>
+                </svg>
+            </div>
+            <div class="circle-value">30.1g</div>
         </div>
-        <div class="circle-value">16g</div>
-    </div>
 
-    <!-- Protein Circle -->
-    <div class="protein">
-        <div class="circle">
-            <svg width="60" height="60">
-                <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
-                <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">8%</text>
-            </svg>
+        <!-- Fat Circle -->
+        <div class="circle-container fat">
+            <div class="circle-title">Fat</div>
+            <div class="circle">
+                <svg width="60" height="60">
+                    <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
+                    <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">72%</text>
+                </svg>
+            </div>
+            <div class="circle-value">16g</div>
         </div>
-        <div class="circle-value">12g</div>
-    </div>
 
-    <!-- Calories Circle -->
-    <div class="calories">
-        <div class="circle">
-            <svg width="60" height="60">
-                <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
-                <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">100%</text>
-            </svg>
+        <!-- Protein Circle -->
+        <div class="circle-container protein">
+            <div class="circle-title">Protein</div>
+            <div class="circle">
+                <svg width="60" height="60">
+                    <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
+                    <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">8%</text>
+                </svg>
+            </div>
+            <div class="circle-value">12g</div>
         </div>
-        <div class="circle-value">320 KCal</div>
+
+        <!-- Calories Circle -->
+        <div class="circle-container calories">
+            <div class="circle-title">Calories</div>
+            <div class="circle">
+                <svg width="60" height="60">
+                    <circle cx="30" cy="30" r="25" stroke-width="5" fill="none" stroke-dasharray="157" stroke-dashoffset="0"></circle>
+                    <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">100%</text>
+                </svg>
+            </div>
+            <div class="circle-value">320 KCal</div>
+        </div>
     </div>
 </div>
 
