--- a/bottom_banner.html
+++ b/bottom_banner.html
@@ -111,7 +111,7 @@
 <!-- Content of the page -->
 <div class="bottom-banner">
     <div class="banner-header">
-        <div class="banner-title">Pizza Salami - Nutrition Value</div>
+        <div class="banner-title">Pizza Salami</div>
         <button class="add-to-cart-button">Add to Cart</button>
     </div>
     <div class="nutrition-circles">
