--- a/bottom_banner.html
+++ b/bottom_banner.html
@@ -12,19 +12,21 @@
             left: 0;
             width: 100%;
             background-color: #fff;
-            padding: 5px 10px; /* Reduced padding */
+            padding: 10px; /* Uniform padding on all sides */
             box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
             z-index: 1000;
             font-family: Arial, sans-serif;
             height: 161px; /* Max height for the banner */
             box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+            justify-content: center; /* Center content vertically */
         }
 
         .banner-header {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 0;
             margin-bottom: 5px; /* Reduced margin */
         }
 
