--- a/bottom_banner.html
+++ b/bottom_banner.html
@@ -178,10 +178,10 @@
             <div class="circle">
                 <svg width="40" height="40">
                     <circle cx="20" cy="20" r="18" stroke-width="4" fill="none" stroke-dasharray="113" stroke-dashoffset="0"></circle>
-                    <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">100%</text>
+                    <text x="50%" y="50%" text-anchor="middle" alignment-baseline="middle">22%</text>
                 </svg>
             </div>
-            <div class="circle-value">21.7%</div>
+            <div class="circle-value">500mg</div>
         </div>
     </div>
 </div>
